# rag-from-scratch

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  CLAUDE.md  CLAUDE_TIPS.md  CONTRACTS.md  DECISIONS.md  DECISIONS_INDEX.md  DockerFile  Dockerfile  GETTING_STARTED.md  GLOSSARY.md  LEARNING_LOG.md  LEARNING_LOG_SUMMARY.md  ORCHESTRATION.md  README.md  TOKEN_OPTIMIZATION.md  TOKEN_RECORDS.md  TROUBLESHOOTING.md  commit-protocol-template.md  commit-protocol.md  context-budget.json  demo.py  docker-compose.prod.yml  docker-compose.yml  learning-log-archive-era1.md  learning-log-archive-era2.md  learning-log-archive-era3.md  notes.txt  project-state.json  pyproject.toml  team-preferences.md
.claude/: settings.json  settings.local.json
.claude/agents/: ai-engineer.md  backend.md  claude.md  devops.md  frontend.md  lara.md  product.md  qa.md  rag-specialist.md  reviewer.md  security.md  tech-writer.md
.claude/commands/: archaeology.md  archive-worklog.md  handoff-check.md  init.md  next-step.md  project-complete.md  qa-check.md  replan.md  review-request.md  rollback.md  security-audit.md  status.md
UI_Design/: Knowledge Profile Sidebar.html  README.md  SKILL.md  colors_and_type.css
UI_Design/app/: App.jsx  Auth.jsx  ChatShell.jsx  KnowledgeProfile.jsx  Landing.jsx  README.md  index.html  kit.css
UI_Design/preview/: brand-icons.html  brand-logo.html  colors-brand-gradient.html  colors-glow.html  colors-semantic.html  colors-surfaces.html  colors-text.html  components-buttons.html  (+18 more)
commit-specs/: commit-07.md  commit-08.md  commit-09.md  commit-10.md  commit-11.md  commit-12.md  commit-13.md  commit-14.md  commit-15.md  commit-16.md  commit-17.md  commit-18.md  commit-19.md  commit-20.md  commit-21.md  commit-22.md  commit-23.md  commit-24.md  commit-25.md  commit-26.md  commit-27.md  commit-28.md  commit-29.md  commit-30.5.md  commit-30.md  commit-31.md  commit-32.md  commit-33.md  commit-34.md  commit-35.md  commit-36.md  commit-37.md  commit-38.5.md  commit-38.md  commit-39.md  commit-40.md  commit-41.md  commit-42.md  commit-43.md  commit-44.md  (+23 more)
docs/: demo-scenario.md  scoring-model.md
hooks/: agent-config.json  post_commit_next_step.py  pre_commit_check.py  reviewer_read_block.py  tool_cap.json  tool_cap_end.py  tool_cap_enforce.py  tool_cap_start.py
tests/: conftest.py  test_agent_state.py  test_assess_node.py  test_cache.py  test_chat_route.py  test_conversation_memory.py  test_generate_node.py  test_graph.py  test_graph_smoke.py  test_ingest_auth.py  test_mastery_routing.py  test_onboarding.py  test_open_question_delivery.py  test_profile_api.py  test_profile_service.py  test_question_difficulty_degradation.py  test_question_generation.py  test_question_type_balance.py  test_rag_prompts.py  test_retrieve_node.py  test_scoring.py  test_update_profile_node.py
(+144 files in other folders)
